# RAG-document-qa

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  setup.py
.claude/: launch.json
.github/workflows/: deploy.yml
src/config/: settings.py
src/document_ingestion/: document_processor.py
src/graph_builder/: graph_builder.py
src/nodes/: react_node.py
src/state/: rag_state.py
src/utils/: __init__.py  logger.py
src/vectorstore/: vectorstore.py
static/: index.html  script.js  style.css
